--- a/index.html
+++ b/index.html
@@ -1,37 +1,82 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <title>Dev JP</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
     <div class="bg-img">
-        <div style="display: flex;">
-            <span class="button">Developer skills</span>
+        <div class="dropdown custom-dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Developer Skills
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="line-height: 8vh;">
+                <ul class="column-list">
+                    <li class="dropdown-item">HTML5 <img src="icons/html.png" alt="html icon" width="10%"></li>
+                    <li class="dropdown-item">CSS <img src="icons/css.png" alt="css icon" width="10%"></li>
+                    <li class="dropdown-item">Bootstrap <img src="icons/bootstrap.png" alt="bootstrap icon" width="10%"></li>
+                    <li class="dropdown-item">Java <img src="icons/java.png" alt="java icon" width="14%"></li>             
+                    <li class="dropdown-item">Javascript <img src="icons/javascript.png" alt="javascript icon" width="10%"></li>
+                    <li class="dropdown-item">Typescript <img src="icons/typescript.png" alt="typescript icon" width="10%"></li>
+                    <li class="dropdown-item">NodeJS <img src="icons/nodejs.png" alt="node-js icon" width="15%"></li>
+                    <li class="dropdown-item"> <img src="icons/junit.png" alt="junit icon" width="15%"></li>
+                    <li class="dropdown-item">Angular <img src="icons/angular.png" alt="angular icon" width="14%"></li>
+                    <li class="dropdown-item">Spring <img src="icons/spring.png" alt="spring icon" width="14%"></li>
+                    <li class="dropdown-item">DB SQL/NoSQL <img src="icons/banco-de-dados.png" alt="database icon" width="8%"></li>
+                </ul>
+            </div>
         </div>
         <div style="margin: auto; margin-bottom: 10px;">
-            <p style="font-size: 2em; margin-bottom: 0px; line-height: 1.2em;" class="font-public"><span class="bolder">HEY I AM</span> JOÃO PAULO HORA <br> <span class="bolder">BUT YOU CAN CALL ME</span> JP</p>
-            <p style="line-height: 0.5em; font-size: 1.6em;">I am a Full Stack <span style="color: #8F00FF;" class="font-public">developer</span> :&#41;</p>
+            <p style="font-size: clamp(0.5em,2.5vw,1.8em); margin-bottom: 0px; line-height: 1.2em;" class="font-public"><span class="bolder">HEY I AM</span> JOÃO PAULO HORA <br> <span class="bolder">BUT YOU CAN CALL ME</span> JP</p>
+            <p style="line-height: 0.5em; font-size: clamp(0.5em,2.5vw,1.6em);">I am a Full Stack <span style="color: #8F00FF;" class="font-public">developer</span> :&#41;</p>
         </div>
 
         <div style="margin-top: 4%; margin-bottom: 3%;">
-            <p style="font-size: 1.9em;">Acess my networks and <span style="color: #D9C300">see</span> my projects</p>
+            <p style="font-size: clamp(0.5em,2.5vw,1.8em);">Acess my networks and <span style="color: #D9C300">see</span> my projects</p>
         </div>
-        <div style="display: flex; margin-bottom: 3%;">
-            <img style="margin-left: 550px; margin-right: 100px; display: flex;" src="img/github.png" alt="github" width="60px" height="60px">
-            <img style="display: flex;" src="img/linkedin.png" alt="linkedin" width="60px" height="60px">
+        <div style="display: flex; margin-bottom: 3%; align-items: center;justify-content: center;gap: 1%;">
+            <div>
+                <a href="https://github.com/JpHds" target="_blank">
+                    <figure id="github">
+                        <img class="hover-zoom" src="img/github.png" alt="github" onmouseover="this.src='img/github-blue.png'" onmouseout="this.src='img/github.png'"></a>
+                    </figure>
+            </div>
+            <div>
+                <a href="https://www.linkedin.com/in/joaopaulohora/" target="_blank">
+                    <figure>
+                        <img class="hover-zoom" src="img/linkedin.png" alt="linkedin" onmouseover="this.src='img/linkedin-blue.png'" onmouseout="this.src='img/linkedin.png'"></a>
+                    </figure>
+            </div>
         </div>
         <div>
-            <p class="font-droid">About</p>
-            <p class="font-droid" style="font-size: 1.4em;">I'm a Full Stack developer specializing in back-end.<br> <span style="color: #00FF38;">Currently</span>, I'm focused on developing agile<br> applications using <span style="color: #D9C300">SQL</span> and <span style="color: #D9C300">NoSQL</span> databases.</p>
+            <p class="font-droid" style="font-size: clamp(0.5em,2.5vw,1.5em);">About</p>
+            <p class="font-droid" style="font-size: clamp(0.5em,2.5vw,1.4em);">I'm a Full Stack developer specializing in back-end.<br> <span style="color: #00FF38;">Currently</span>, I'm focused on developing agile<br> applications using <span style="color: #D9C300">SQL</span> and <span style="color: #D9C300">NoSQL</span> databases.</p>
         </div>
-        <div style="text-align: right;">
-            <span class="button" style="margin-bottom: 0%;">Contact me</span>
-        </div>
+            <div class="cont">
+                <div class="dropup">
+                <div class="btn-group dropup custom-dropup">
+                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Contact me
+                    </button>
+                        <div class="dropdown-menu" style="width: max-content;">
+                        <ul class="column-up" style="padding-left: 0; text-align: center;">
+                            <li class="dropdown-item"> <img src="contact-icons/gmail.png" alt="gmail" width="10%" style="padding-right: 2%;"> <span class="txtToCopy">joaopaulo8hora@gmail.com</span></li>
+                            <li class="dropdown-item"> <img src="contact-icons/whatsapp.png" alt="whatsapp" width="10%" style="padding-right: 2%;"><span class="txtToCopy">(79) 98822-2654</span></li>
+                        </ul>
+                        </div>
+                </div>
+                </div>
+            </div>
     </div>
+
+    <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </body>
 </html>
