--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
                     </figure>
             </div>
             <div>
+                <figure>
+                    <img class="hover-zoom" src="img/photo.jpeg" alt="profile photo" style="border-radius: 50%; box-shadow: -1px 2px 11px #ffffff52;">
+                </figure>
+            </div>
+            <div>
                 <a href="https://www.linkedin.com/in/joaopaulohora/" target="_blank">
                     <figure>
                         <img class="hover-zoom" src="img/linkedin.png" alt="linkedin" onmouseover="this.src='img/linkedin-blue.png'" onmouseout="this.src='img/linkedin.png'"></a>
